--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -2,6 +2,7 @@
 {% load userName %}
 {% load tz %}
 {% load json_dumps %}
+{% load static %}
 {% block sitemenu-content-secondary %}
 	{% include "sample_subnav.html" %}
 {% endblock %}
@@ -9,7 +10,7 @@
  {% block cssExtras %}
  {{ block.super }}
   {% include "xgds_notes2/NoteCSS.html" %}
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_sample/css/xgds_sample.css"></link>
+    <link rel="stylesheet" type="text/css" href="{% static 'xgds_sample/css/xgds_sample.css'%}"></link>
  {% endblock cssExtras %}
 
 
