--- a/apps/basaltApp/templates/xgds_instrument/editInstrumentData.html
+++ b/apps/basaltApp/templates/xgds_instrument/editInstrumentData.html
@@ -3,6 +3,7 @@
 
 {% load tz %}
 {% load siteFrames %}
+{% load static %}
 
 {% block cssExtras %}
 {{ block.super }}
@@ -65,7 +66,7 @@
   	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
 	{% include "xgds_core/timeJS.html" %}
 	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jqueryui-timepicker-addon/dist/jquery-ui-timepicker-addon.min.js"></script>
-	<script type="text/javascript" src='{{ STATIC_URL }}xgds_core/js/datetimepickerUtils.js'></script>
+	<script type="text/javascript" src="{% static 'xgds_core/js/datetimepickerUtils.js' %}"></script>
 	<script type=text/javascript>
 	var appOptions = {
 			searchModels: {{ settings.XGDS_MAP_SERVER_JS_MAP|safe }}
@@ -73,7 +74,7 @@
 	app.start(appOptions);
 	</script>
 	<script type="text/javascript" src="{{EXTERNAL_URL}}Flot/jquery.flot.js"></script>
-	<script type="text/javascript" src='{{ STATIC_URL }}xgds_instrument/js/instrumentView.js'></script>
+	<script type="text/javascript" src="{% static 'xgds_instrument/js/instrumentView.js'%}"></script>
 {% endblock scripts %}
 
 {% block jsInit %}
