basalt updates for sse

--- a/apps/basaltApp/templates/MapView.html
+++ b/apps/basaltApp/templates/MapView.html
@@ -64,5 +64,6 @@
 {% block scripts %}
 {{ block.super }}
 	<script type="text/javascript" src="{% static 'xgds_core/js/conditionUtils.js' %}"></script>
+	<script type="text/javascript" src="{% static 'basaltApp/js/basaltConditionUtils.js' %}"></script>
 {% endblock scripts %}
     
