--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -78,7 +78,7 @@
 	            <a href="{% url 'email_feedback' %}" class='btn btn-primary fa fa-envelope' role='button'></a>
 	            {% help_button help_content_path title %}
 	            <span href="#" class='btn alert-danger' id="connected_div" alt="Connection">
-	            	<span class="fa fa-spinner" id="connected"></span>
+	            	<span class="fa fa-bolt" id="connected" style="min-width:1rem;"></span>
 	            </span>
 	            </div>
             </div>
