--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -77,7 +77,7 @@
 	            {% endif %} 
 	            <a href="{% url 'email_feedback' %}" class='btn btn-primary fa fa-envelope' role='button'></a>
 	            {% help_button help_content_path title %}
-	            <span href="#" class='btn alert-danger' id="connected_div" alt="Connection">
+	            <span class='btn alert-danger' id="connected_div" style="visibility:hidden;">
 	            	<span class="fa fa-bolt" id="connected" style="min-width:1rem;"></span>
 	            </span>
 	            </div>
@@ -135,7 +135,6 @@
 	<script src="{% static 'xgds_core/js/helpPopup.js' %}"></script>
 	<script src="{{ EXTERNAL_URL }}tether/dist/js/tether.min.js"></script>
 	<script src="{{ EXTERNAL_URL }}bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="{% static 'xgds_core/js/sseUtils.js' %}"></script>
     {% endblock scripts %}
     
     {% block postscripts %}
@@ -146,7 +145,6 @@
       {% endblock jsSetVars %}
 
       {% block jsInit %}
-			sse.initialize();
       {% endblock jsInit %}
     </script>
 	
