--- a/apps/basaltApp/templates/MapView.html
+++ b/apps/basaltApp/templates/MapView.html
@@ -43,7 +43,14 @@
 {% block jsInit %}
 	
 	{% block jsInitPreApp %}
-	trackSse.preloadedIcons = $.preloadImages(["{% static 'basaltApp/icons/ev1_pointer.png' %}", "{% static 'basaltApp/icons/ev2_pointer.png' %}"]);
+	var preloadImageList = ["{% static 'basaltApp/icons/ev1_pointer.png' %}", 
+							"{% static 'basaltApp/icons/ev2_pointer.png' %}",
+							"{% static 'basaltApp/icons/ev1_circle.png' %}", 
+							"{% static 'basaltApp/icons/ev2_circle.png' %}",
+							"{% static 'basaltApp/icons/ev1_stop.png' %}", 
+							"{% static 'basaltApp/icons/ev2_stop.png' %}"
+							];
+	trackSse.preloadedIcons = $.preloadImages(preloadImageList);
 	{% endblock jsInitPreApp %}
 	
 	$(function(){
