--- a/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
+++ b/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
@@ -58,7 +58,7 @@
 		<td></td>
 		<td></td>
 		<td>{% if flight.start_time %}{% timezone flight.timezone %} {{flight.start_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%} <a href="{% url 'planner2_startFlight' flight.uuid %}" class="btn btn-green btn-sm">{% if flight.start_time %}re{%endif%}start</a></td>
-		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%}<a href="{% url 'planner2_stopFlight' flight.uuid %}" class="btn btn-red btn-sm">stop</a></td>
+		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%}<a href="{% url 'planner2_stopFlight' flight.uuid %}" class="btn btn-red btn-sm ml-1">stop</a></td>
 		<td></td>
 	</tr>
 		{% for pe in flight.plans.all %}
