work in progress, ping subsystems script works

--- a/apps/basaltApp/templates/xgds_status_board/subsystemStatus.html
+++ b/apps/basaltApp/templates/xgds_status_board/subsystemStatus.html
@@ -2,19 +2,9 @@
 
 {% load core_constant %}
 
-{% block preDashboard %}
-DELAY: {% constant_value 'delay' %} s</br>
+{% block preContainer %}
+DELAY: {% constant_value 'delay' %} s </br>
 REMOTE DELAY: {% constant_value 'remoteDelay' %} s
-{% endblock preDashboard %}
+{% endblock preContainer %}
 
-{% block preLayout %}
-	constructSubsystemMonitorView({{subsystemStatusJson|safe}});
-{% endblock %}
 
-{% block jsInit %}
-  {{ block.super }}
-  $(function() {
-      var widget = new xgds_status_board.SubsystemStatusWidget($('#subsystemStatus'));
-      widget.update();
-  });
-{% endblock %}
