added flir temperature to sample

--- a/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
+++ b/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
@@ -57,6 +57,10 @@
 			<td>{{flight_name}}</td>
 		</tr>
 		<tr>
+			<th><label for="id_flight">FLIR Temp (C):</label></th>
+			<td>{{flir_temperature}}</td>
+		</tr>
+		<tr>
 			<th><label for="id_latitude">Latitude:</label></th>
 			<td>{{lat}}</td>
 		</tr>
