working rest framework

--- a/apps/basaltApp/templates/basaltApp/kmlWrist.html
+++ b/apps/basaltApp/templates/basaltApp/kmlWrist.html
@@ -30,10 +30,10 @@
   </p>
 {% endfor %}
   <p>
-  	<a href="/basaltApp/wrist.kml" target="_blank" download>WORKING TRACK POSITIONS</a>
+  	<a href="/basaltApp/rest/wrist.kml" target="_blank" download>WORKING TRACK POSITIONS</a>
   </p>
   <p>
-  	<a href="/basaltApp/hvnp_so2_link.kml" target="_blank" download>AIR QUALITY</a>
+  	<a href="/basaltApp/rest/hvnp_so2_link.kml" target="_blank" download>AIR QUALITY</a>
   </p>
 </h6>
     
