--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -71,7 +71,7 @@
             	<div></div>
 	            <div class="mt-1">
 	            {% if user.is_authenticated %}
-	                 <a class="btn btn-primary btn btn-primary" href="{{ logout_url }}" title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
+	                 <a class="btn btn-primary btn btn-primary" href="/apache_logout/"  title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
 	            {% else %} 
 	                <a class="btn btn-primary btn btn-primary" href="{{ login_url_with_next }}"title="Login">Login</a>
 	            {% endif %} 
