again trying to fix password reset url

--- a/apps/basaltApp/templates/registration/password_reset_email_html.html
+++ b/apps/basaltApp/templates/registration/password_reset_email_html.html
@@ -7,7 +7,7 @@ on the {{site_name}} xGDS server.{% endblocktrans %}
 {% trans "Please go to the following page and choose a new password:" %}</p>
 <p>
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{{ protocol }}://{{ request.META.HTTP_HOST }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
 </p>
 <p>
