--- a/apps/basaltApp/templates/registration/password_reset_email.html
+++ b/apps/basaltApp/templates/registration/password_reset_email.html
@@ -3,9 +3,9 @@
 
 {% trans "Please go to the following page and choose a new password:" %}
 {% block reset_link %}
-{{ protocol }}://{{ request.META.HTTP_HOST }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
-{% trans "Your username, in case you've forgotten:" %} {{ user.username }}
+{% trans "Your username is:" %} {{ user.username }}
 
 {% trans "Thanks for using our ground data system!" %}
 
