removed FTIR from nav

--- a/apps/basaltApp/templates/basaltApp/index.html
+++ b/apps/basaltApp/templates/basaltApp/index.html
@@ -28,7 +28,7 @@ When you are told there are active EVAs, please click on the BASALT logo in the 
   </tr>
   <tr>
     <td style="text-align:right"><strong>Search</strong></td>
-    <td>Search for anything on the map, including Photos, Samples, ASD and FTIR data.</td>
+    <td>Search for anything on the map, including Photos, Samples, ASD and pXRF data.</td>
   </tr>
   <tr>
     <td style="text-align:right"><strong>Import</strong></td>
