--- a/apps/basaltApp/templates/MapView.html
+++ b/apps/basaltApp/templates/MapView.html
@@ -17,8 +17,9 @@
 		<div>
 			{% block buttonrowRight %}
 			{% endblock buttonrowRight %}
-			<button id="gridstack_toggleAll" class='btn btn-primary fa fa-lock' role='button' style="color:white;" onclick="xgds_gridstack.handleToggleAllClick();"></button>
-		</div>
+			<button id="gridstack_toggleAll" class='btn btn-primary fa fa-lock my-1' role='button' style="color:white;" onclick="xgds_gridstack.handleToggleAllClick();"></button>
+		    <button id="gridstack_reset" class='btn btn-primary my-1' role='button' style="color:white; max-height:1.8rem;" onclick="xgds_gridstack.resetGrid(window.location.href);">Reset Grid</button>
+        </div>
 </div>
  <div class="grid-stack" id="container">
     	<div id="map-gridstack-item" class="grid-stack-item"  data-gs-x="0" data-gs-y="0" data-gs-width="10" data-gs-height="8" >
@@ -72,6 +73,7 @@
 		{% endblock preLayout %}
 		
     	xgds_gridstack.initializeGridstack({width:12});
+        xgds_gridstack.loadGrid(window.location.href);
     	{% if settings.XGDS_SSE %}
     	condition.initialize();
     	trackSse.initialize();
