--- a/apps/basaltApp/templates/MapView.html
+++ b/apps/basaltApp/templates/MapView.html
@@ -18,7 +18,7 @@
 			{% block buttonrowRight %}
 			{% endblock buttonrowRight %}
 			<button id="gridstack_toggleAll" class='btn btn-primary fa fa-lock my-1' role='button' style="color:white;" onclick="xgds_gridstack.handleToggleAllClick();"></button>
-		    <button id="gridstack_reset" class='btn btn-primary my-1' role='button' style="color:white; max-height:1.8rem;" onclick="xgds_gridstack.resetGrid(window.location.href);">Reset Grid</button>
+		    <button id="gridstack_reset" class='btn btn-primary my-1' role='button' style="color:white; max-height:1.8rem;" onclick="xgds_gridstack.resetGrid(window.location.href);">Reset Layout</button>
         </div>
 </div>
  <div class="grid-stack" id="container">
@@ -73,7 +73,6 @@
 		{% endblock preLayout %}
 		
     	xgds_gridstack.initializeGridstack({width:12});
-        xgds_gridstack.loadGrid(window.location.href);
     	{% if settings.XGDS_SSE %}
     	condition.initialize();
     	trackSse.initialize();
