added xgds live

--- a/apps/basaltApp/templates/basaltApp/index.html
+++ b/apps/basaltApp/templates/basaltApp/index.html
@@ -39,6 +39,10 @@ When you are told there are active EVAs, please click on the BASALT logo in the 
     <td style="text-align:right"><strong>Status</strong></td>
     <td>See current system status</td>
   </tr>
+  <tr>
+    <td style="text-align:right"><strong> <a href="/wristApp/mobile.html"> xGDS Live </a></strong></td>
+    <td>The wrist app! Not on your wrist! </td>
+  </tr>
   {% endif %}
 </table>
 </p>
