updated notes to show labels in openlayers if they are show on map

--- a/apps/basaltApp/templates/dashboard_base.html
+++ b/apps/basaltApp/templates/dashboard_base.html
@@ -115,7 +115,7 @@
 	{% block preDashboard %}
 	{% endblock preDashboard %}
 	{% block dashboard %}
-	<div id="container" class="grid-stack grid-stack-6"> 
+	<div id="container" class="grid-stack {% block gridstackWidth %}grid-stack-6 {% endblock gridstackWidth %}">
 		
 		{% block preMap %}
 		{% endblock preMap %}
