delete extra quote

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -145,7 +145,7 @@
 	
 	<script type="text/javascript">
       {% block jsSetVars %}
-          var owaUrlFromTemplate = "{{ settings.OWA_SITE_URL }}""
+          var owaUrlFromTemplate = "{{ settings.OWA_SITE_URL }}"
           var owaSiteIdFromTemplate = "{{ settings.OWA_SITE_ID }}"
       {% endblock jsSetVars %}
 
