--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -134,8 +134,8 @@
 	<script type="text/javascript" src="{% static 'xgds_core/js/jqueryUtils.js' %}"></script>
 	<script src="{% static 'xgds_core/js/helpPopup.js' %}"></script>
     {% if settings.INCLUDE_OWA_TRACKING %}
-        var owaUrlFromTemplate = "{{ settings.OWA_SITE_URL }}"
-        var owaSiteIdFromTemplate = "{{ settings.OWA_SITE_ID }}"
+       <script var owaUrlFromTemplate = "{{ settings.OWA_SITE_URL }}"></script>
+       <script var owaSiteIdFromTemplate = "{{ settings.OWA_SITE_ID }}"></script>
        <script src="{% static 'xgds_core/js/owaTrackingInclude.js' %}"></script>
     {%  endif  %}
 	<script src="{{ EXTERNAL_URL }}tether/dist/js/tether.min.js"></script>
