--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -125,6 +125,10 @@
   </div>
   
   {% block prescripts %}
+	<script type="text/javascript">
+         var owaUrlFromTemplate = "{{ settings.OWA_SITE_URL }}";
+         var owaSiteIdFromTemplate = "{{ settings.OWA_SITE_ID }}";
+        </script>
   {% endblock prescripts %}
 	
     {% block scripts %}
@@ -133,13 +137,11 @@
 	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="{% static 'xgds_core/js/jqueryUtils.js' %}"></script>
 	<script src="{% static 'xgds_core/js/helpPopup.js' %}"></script>
-    {% if settings.INCLUDE_OWA_TRACKING %}
-       <script var owaUrlFromTemplate = "{{ settings.OWA_SITE_URL }}"></script>
-       <script var owaSiteIdFromTemplate = "{{ settings.OWA_SITE_ID }}"></script>
-       <script src="{% static 'xgds_core/js/owaTrackingInclude.js' %}"></script>
-    {%  endif  %}
 	<script src="{{ EXTERNAL_URL }}tether/dist/js/tether.min.js"></script>
 	<script src="{{ EXTERNAL_URL }}bootstrap/dist/js/bootstrap.min.js"></script>
+        {% if settings.INCLUDE_OWA_TRACKING %}
+          <script src="{% static 'xgds_core/js/owaTrackingInclude.js' %}"></script>
+        {%  endif  %}
     {% endblock scripts %}
     
     {% block postscripts %}
