--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -126,6 +126,7 @@
   
   {% block prescripts %}
 	<script type="text/javascript">
+         var useOWATracking = {{settings.INCLUDE_OWA_TRACKING|yesno:"true,false"}};
          var owaUrlFromTemplate = "{{ settings.OWA_SITE_URL }}";
          var owaSiteIdFromTemplate = "{{ settings.OWA_SITE_ID }}";
         </script>
