fix more broken dependencies after bower to npm conversion

--- a/apps/basaltApp/templates/xgds_instrument/editInstrumentData.html
+++ b/apps/basaltApp/templates/xgds_instrument/editInstrumentData.html
@@ -73,7 +73,7 @@
 	};
 	app.start(appOptions);
 	</script>
-	<script type="text/javascript" src="{{EXTERNAL_URL}}Flot/jquery.flot.js"></script>
+	<script type="text/javascript" src="{{EXTERNAL_URL}}flot/jquery.flot.js"></script>
 	<script type="text/javascript" src="{% static 'xgds_instrument/js/instrumentView.js'%}"></script>
 {% endblock scripts %}
 
