update jquery-ui dependency to include built files

--- a/apps/basaltApp/templates/xgds_planner2/planIndex.html
+++ b/apps/basaltApp/templates/xgds_planner2/planIndex.html
@@ -7,7 +7,7 @@
 {% block cssExtras %}
 {{ block.super }}
 <style type="text/css" title="currentStyle">
-	@import "{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css";
+	@import "{{ EXTERNAL_URL }}jquery-ui-dist/jquery-ui.min.css";
 	@import url('{{EXTERNAL_URL}}jqueryui-timepicker-addon/dist/jquery-ui-timepicker-addon.css');
 </style>
 <style type="text/css">
@@ -133,7 +133,7 @@ table.planIndex td.exportFormat a {
 
 {% block scripts %}
   {{ block.super }}
-  	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
+  	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui-dist/jquery-ui.min.js"></script>
   	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}datatables/media/js/jquery.dataTables.min.js"></script>
 	<script language="javascript" type="text/javascript" src="{% static 'geocamUtil/js/datatable_helpers.js' %}"></script>
 	{% include "xgds_core/timeJS.html" %}
