migrated flights from xgds_planner2 to xgds_core

--- a/apps/basaltApp/templates/xgds_core/ManageFlights.html
+++ b/apps/basaltApp/templates/xgds_core/ManageFlights.html
@@ -3,7 +3,7 @@
 {% load tz %}
 {% load static %}
 
-{% block siteSection %} Manage {{ settings.XGDS_PLANNER_FLIGHT_MONIKER }} {% endblock %}
+{% block siteSection %} Manage {{ settings.XGDS_CORE_FLIGHT_MONIKER }} {% endblock %}
 
 {% block nav %}
     {% nav "planner2.manageFlight" %}
@@ -19,15 +19,15 @@
 	<span class="error">{{ errorString }}</span>
 	{% endif %}
 	<div class="d-flex justify-content-between" style="width: 100%;">
-		<form name='TodayForm' id="todayForm" action="{% url 'planner2_updateToday' %}" method="post">
+		<form name='TodayForm' id="todayForm" action="{% url 'xgds_core_updateToday' %}" method="post">
 			<label for="id_today" style="display:inline">
 				<input type="checkbox" class="mr-1" name="today" id="id_today" {% if request.session.today %} checked="checked" {%endif %} ></input>
 				Today
 			</label>
 		</form>
 		<div class="btn-group" role="group">
-			<a class="btn btn-primary" role="button" href="{% url 'planner2_addGroupFlight' %}" >Create {{ settings.XGDS_PLANNER_FLIGHT_MONIKER}}s</a>
-			<a class="btn btn-primary" role="button" href="{% url 'planner2_manageFlightHelp' %}" target="help">Help</a>
+			<a class="btn btn-primary" role="button" href="{% url 'xgds_core_addGroupFlight' %}" >Create {{ settings.XGDS_CORE_FLIGHT_MONIKER}}s</a>
+			<a class="btn btn-primary" role="button" href="{% url 'xgds_core_manageFlightHelp' %}" target="help">Help</a>
 		</div>
 	</div>
 		
@@ -54,11 +54,11 @@
 	</tr>
 	{% for flight in group.flights %}
 	<tr {% if not flight.end_time and flight.start_time %} style="background:lightgreen;" {% endif %}>
-		<td >&nbsp;&nbsp;&nbsp;{{settings.XGDS_PLANNER_FLIGHT_MONIKER}}: {{ flight.name }}</td>
+		<td >&nbsp;&nbsp;&nbsp;{{settings.XGDS_CORE_FLIGHT_MONIKER}}: {{ flight.name }}</td>
 		<td></td>
 		<td></td>
-		<td>{% if flight.start_time %}{% timezone flight.timezone %} {{flight.start_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%} <a href="{% url 'planner2_startFlight' flight.uuid %}" class="btn btn-green btn-sm">{% if flight.start_time %}re{%endif%}start</a></td>
-		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%}<a href="{% url 'planner2_stopFlight' flight.uuid %}" class="btn btn-red btn-sm ml-1">stop</a></td>
+		<td>{% if flight.start_time %}{% timezone flight.timezone %} {{flight.start_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%} <a href="{% url 'xgds_core_startFlight' flight.uuid %}" class="btn btn-green btn-sm">{% if flight.start_time %}re{%endif%}start</a></td>
+		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{%endif%}<a href="{% url 'xgds_core_stopFlight' flight.uuid %}" class="btn btn-red btn-sm ml-1">stop</a></td>
 		<td></td>
 	</tr>
 		{% for pe in flight.plans.all %}
@@ -88,7 +88,7 @@
 	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jqueryui-timepicker-addon/dist/jquery-ui-timepicker-addon.min.js"></script>
 <script type="text/javascript">
 
-/*$.post('{# url planner2_updateToday #}', function(data) {
+/*$.post('{# url xgds_core_updateToday #}', function(data) {
     alert(data);
 }); */
 
@@ -96,7 +96,7 @@ $('#id_today').change(function(e){
     var ischecked = $('#id_today').is(":checked");
     $.ajax({
         type: "POST",
-        url: "{% url 'planner2_updateToday' %}",
+        url: "{% url 'xgds_core_updateToday' %}",
         data: { today: ischecked}
     }).done(function (response) {
         location.reload(true);
@@ -106,7 +106,7 @@ $('#id_today').change(function(e){
 
 $(document).ready( function () {
     defaultOptions['oLanguage'] = {
-        "sLengthMenu": "Display _MENU_ {{settings.XGDS_PLANNER_FLIGHT_MONIKER}}s & {{ settings.XGDS_PLANNER_PLAN_MONIKER}}s"
+        "sLengthMenu": "Display _MENU_ {{settings.XGDS_CORE_FLIGHT_MONIKER}}s & {{ settings.XGDS_PLANNER_PLAN_MONIKER}}s"
       };
     defaultOptions['ordering'] = false;
     defaultOptions['bSort'] = false;
