--- a/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
+++ b/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
@@ -3,8 +3,8 @@
 		<li class='nav-item {% currentnav planner2_index planner2_planCreate planner2_planImport*%}'>
 			<a class="nav-link {% currentnav planner2_index planner2_planCreate planner2_planImport*%} " href="{% url 'planner2_index' %}"> {{settings.XGDS_PLANNER_PLAN_MONIKER}}s </a>
 		</li>
-		<li class='nav-item {% currentnav planner2_flownFlights planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan planner2_group_flight_summary planner2_addGroupFlight%}'>
-			<a class="nav-link {% currentnav planner2_flownFlights planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan planner2_group_flight_summary planner2_addGroupFlight %}" href="{% url 'planner2_flownFlights' %}">{{settings.XGDS_PLANNER_FLIGHT_MONIKER}}s</a>
+		<li class='nav-item {% currentnav xgds_core_flownFlights xgds_core_manage xgds_core_startFlight xgds_core_stopFlight planner2_startPlan planner2_stopPlan xgds_core_group_flight_summary xgds_core_addGroupFlight%}'>
+			<a class="nav-link {% currentnav xgds_core_flownFlights xgds_core_manage xgds_core_startFlight xgds_core_stopFlight planner2_startPlan planner2_stopPlan xgds_core_group_flight_summary xgds_core_addGroupFlight %}" href="{% url 'xgds_core_flownFlights' %}">{{settings.XGDS_CORE_FLIGHT_MONIKER}}s</a>
 		</li>
 		<li class='nav-item {% currentnav planner2_edit_ev %}'>
 			<a class="nav-link {% currentnav planner2_edit_ev %}" href="{% url 'planner2_edit_ev' %}"> Crew Mass </a>
