REFACTORED merged resource to xgds_core.vehicle

--- a/apps/basaltApp/templates/xgds_instrument/handlebars/pxrf-view.handlebars
+++ b/apps/basaltApp/templates/xgds_instrument/handlebars/pxrf-view.handlebars
@@ -63,7 +63,7 @@
 		{{/if}}
 		{{#if ev_name}}
 		<tr>
-			<th><label for="id_ev_name">Resource:</label></th>
+			<th><label for="id_ev_name">Asset:</label></th>
 			<td>{{ev_name}}</td>
 		</tr>
 		{{/if}}
