--- a/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
+++ b/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
@@ -49,8 +49,8 @@
 			<td>{{description}}</td>
 		</tr>
 		<tr>
-			<th><label for="id_resource">Resource:</label></th>
-			<td>{{resource_name}}</td>
+			<th><label for="id_vehicle">Asset:</label></th>
+			<td>{{vehicle_name}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_flight">EVA:</label></th>
