--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -78,8 +78,8 @@
 			<td>{{ sample.region.name }}</td>
 		</tr>
 		<tr>
-			<th><label for="id_resource">Resource:</label></th>
-			<td>{{ sample.resource.name }}</td>
+			<th><label for="id_vehicle">{{ settings.XGDS_CORE_VEHICLE_MONIKER }}:</label></th>
+			<td>{{ sample.vehicle.name }}</td>
 		</tr>
 		<tr>
 			<th><label for="id_collector">Collector:</label></th>
