--- a/apps/basaltApp/templates/xgds_core/groupFlightSummary.html
+++ b/apps/basaltApp/templates/xgds_core/groupFlightSummary.html
@@ -10,6 +10,7 @@
 {% endblock groupFlightContents %}
 
 {% block flightContents %}
+
 {% if flight.hasVideo %}
 <tr>
 <td>Video
@@ -17,40 +18,40 @@
 <td><a href="{{ flight.view_url }}" target="">Video</a></td>
 </tr>
 {% endif %}
-{% if flight.basaltimageset_set.exists %}
+{% if flight.basaltapp_basaltimageset_related.exists %}
 <tr>
 <td>Photos</td>
-<td><a href="{% url 'search_map_object_filter' 'Photo' theFilter %}" target="_blank">{{flight.basaltimageset_set.count}}</a></td>
+<td><a href="{% url 'search_map_object_filter' 'Photo' theFilter %}" target="_blank">{{flight.basaltapp_basaltimageset_related.count}}</a></td>
 </tr>
 {% endif %}
-{% if flight.basaltnote_set.exists %}
+{% if flight.basaltapp_basaltnote_related.exists %}
 <tr>
 <td>Notes</td>
-<td><a href="{% url 'search_xgds_notes_map_filter' theFilter %}" target="_blank">{{flight.basaltnote_set.count}}</a></td>
+<td><a href="{% url 'search_xgds_notes_map_filter' theFilter %}" target="_blank">{{flight.basaltapp_basaltnote_related.count}}</a></td>
 </tr>
 {% endif %}
-{% if flight.basaltsample_set.exists %}
+{% if flight.basaltapp_basaltsample_related.exists %}
 <tr>
 <td>Samples</td>
-<td><a href="{% url 'search_map_object_filter' 'Sample' theFilter %}" target="_blank">{{flight.basaltsample_set.count}}</a></td>
+<td><a href="{% url 'search_map_object_filter' 'Sample' theFilter %}" target="_blank">{{flight.basaltapp_basaltsample_related.count}}</a></td>
 </tr>
 {% endif %}
-{% if flight.pxrfdataproduct_set.exists %}
+{% if flight.pxrfdataproduct_related.exists %}
 <tr>
 <td>pXRF Readings</td>
-<td><a href="{% url 'search_map_object_filter' 'pXRF' theFilter %}" target="_blank">{{flight.pxrfdataproduct_set.count}}</a></td>
+<td><a href="{% url 'search_map_object_filter' 'pXRF' theFilter %}" target="_blank">{{flight.pxrfdataproduct_related.count}}</a></td>
 </tr>
 {% endif %}
-{% if flight.asddataproduct_set.exists %}
+{% if flight.asddataproduct_related.exists %}
 <tr>
 <td>ASD Readings</td>
-<td><a href="{% url 'search_map_object_filter' 'ASD' theFilter %}" target="_blank">{{flight.asddataproduct_set.count}}</a></td>
+<td><a href="{% url 'search_map_object_filter' 'ASD' theFilter %}" target="_blank">{{flight.asddataproduct_related.count}}</a></td>
 </tr>
 {% endif %}
-{% if flight.ftirdataproduct_set.exists %}
+{% if flight.ftirdataproduct_related.exists %}
 <tr>
 <td>FTIR Readings</td>
-<td><a href="{% url 'search_map_object_filter' 'FTIR' theFilter %}" target="_blank">{{flight.ftirdataproduct_set.count}}</a></td>
+<td><a href="{% url 'search_map_object_filter' 'FTIR' theFilter %}" target="_blank">{{flight.ftirdataproduct_related.count}}</a></td>
 </tr>
 {% endif %}
 {% endblock flightContents %}
